Complete board with styling

--- a/Scrabble.html
+++ b/Scrabble.html
@@ -8,7 +8,245 @@
     </head>
     <body>
         <table class="board">
-            <tr>
+            <tr class="column1">
+                <td id="tile" class="tripleword row1">Triple word score</td>
+                <td id="tile" class="plaintile row2"></td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="doubleletter row4">Double letter score</td>
+                <td id="tile" class="plaintile row5"></td>
+                <td id="tile" class="plaintile row6"></td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="tripleword row8">Triple word score</td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="plaintile row10"></td>
+                <td id="tile" class="plaintile row11"></td>
+                <td id="tile" class="doubleletter row12">Double letter score</td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="plaintile row14"></td>
+                <td id="tile" class="tripleword row15">Triple word score</td>
+            </tr>
+            <tr class="column2">
+                <td id="tile" class="plaintile row1"></td>
+                <td id="tile" class="doubleword row2">Double word score</td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="plaintile row4"></td>
+                <td id="tile" class="plaintile row5"></td>
+                <td id="tile" class="tripleletter row6">Triple letter score</td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="plaintile row8"></td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="tripleletter row10">Triple letter score</td>
+                <td id="tile" class="plaintile row11"></td>
+                <td id="tile" class="plaintile row12"></td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="doubleword row14">Double word score</td>
+                <td id="tile" class="plaintile row15"></td>
+            </tr>
+            <tr class= "column3">
+                <td id="tile" class="plaintile row1"></td>
+                <td id="tile" class="plaintile row2"></td>
+                <td id="tile" class="doubleword row3">Double word score</td>
+                <td id="tile" class="plaintile row4"></td>
+                <td id="tile" class="plaintile row5"></td>
+                <td id="tile" class="plaintile row6"></td>
+                <td id="tile" class="doubleletter row7">Double letter score</td>
+                <td id="tile" class="plaintile row8"></td>
+                <td id="tile" class="doubleletter row9">Double letter score</td>
+                <td id="tile" class="plaintile row10"></td>
+                <td id="tile" class="plaintile row11"></td>
+                <td id="tile" class="plaintile row12"></td>
+                <td id="tile" class="doubleword row13">Double word score</td>
+                <td id="tile" class="plaintile row14"></td>
+                <td id="tile" class="plaintile row15"></td>
+            </tr>
+            <tr class= "column4">
+                <td id="tile" class="doubleletter row1">Double letter score</td>
+                <td id="tile" class="plaintile row2"></td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="doubleword row4">Double word score</td>
+                <td id="tile" class="plaintile row5"></td>
+                <td id="tile" class="plaintile row6"></td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="doubleletter row8">Double letter score</td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="plaintile row10"></td>
+                <td id="tile" class="plaintile row11"></td>
+                <td id="tile" class="doubleword row12">Double word score</td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="plaintile row14"></td>
+                <td id="tile" class="doubleletter row15">Double letter score</td>
+            </tr>
+            <tr class= "column5">
+                <td id="tile" class="plaintile row1"></td>
+                <td id="tile" class="plaintile row2"></td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="plaintile row4"></td>
+                <td id="tile" class="doubleword row5">Double word score</td>
+                <td id="tile" class="plaintile row6"></td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="plaintile row8"></td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="plaintile row10"></td>
+                <td id="tile" class="doubleword row11">Double word score</td>
+                <td id="tile" class="plaintile row12"></td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="plaintile row14"></td>
+                <td id="tile" class="plaintile row15"></td>
+            </tr>
+            <tr class= "column6">
+                <td id="tile" class="plaintile row1"></td>
+                <td id="tile" class="tripleletter row2">Triple letter score</td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="plaintile row4"></td>
+                <td id="tile" class="plaintile row5"></td>
+                <td id="tile" class="tripleletter row6">Triple letter score</td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="plaintile row8"></td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="tripleletter row10">Triple letter score</td>
+                <td id="tile" class="plaintile row11"></td>
+                <td id="tile" class="plaintile row12"></td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="tripleletter row14">Triple letter score</td>
+                <td id="tile" class="plaintile row15"></td>
+            </tr>
+            <tr class= "column7">
+                <td id="tile" class="tripleword row1">Triple word score</td>
+                <td id="tile" class="plaintile row2"></td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="doubleletter row4">Double letter score</td>
+                <td id="tile" class="plaintile row5"></td>
+                <td id="tile" class="plaintile row6"></td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="tripleword row8">Triple word score</td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="plaintile row10"></td>
+                <td id="tile" class="plaintile row11"></td>
+                <td id="tile" class="doubleletter row12">Double letter score</td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="plaintile row14"></td>
+                <td id="tile" class="tripleword row15">Triple word score</td>
+            </tr>
+            <tr class= "column8">
+                <td id="tile" class="plaintile row1"></td>
+                <td id="tile" class="tripleletter row2">Triple letter score</td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="plaintile row4"></td>
+                <td id="tile" class="plaintile row5"></td>
+                <td id="tile" class="tripleletter row6">Triple letter score</td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="plaintile row8"></td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="tripleletter row10">Triple letter score</td>
+                <td id="tile" class="plaintile row11"></td>
+                <td id="tile" class="plaintile row12"></td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="tripleletter row14">Triple letter score</td>
+                <td id="tile" class="plaintile row15"></td>
+            </tr>
+            <tr class= "column9">
+                <td id="tile" class="plaintile row1"></td>
+                <td id="tile" class="plaintile row2"></td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="plaintile row4"></td>
+                <td id="tile" class="doubleword row5">Double word score</td>
+                <td id="tile" class="plaintile row6"></td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="plaintile row8"></td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="plaintile row10"></td>
+                <td id="tile" class="doubleword row11">Double word score</td>
+                <td id="tile" class="plaintile row12"></td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="plaintile row14"></td>
+                <td id="tile" class="plaintile row15"></td>
+            </tr>
+            <tr class= "column10">
+                <td id="tile" class="doubleletter row1">Double letter score</td>
+                <td id="tile" class="plaintile row2"></td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="doubleword row4">Double word score</td>
+                <td id="tile" class="plaintile row5"></td>
+                <td id="tile" class="plaintile row6"></td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="doubleletter row8">Double letter score</td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="plaintile row10"></td>
+                <td id="tile" class="plaintile row11"></td>
+                <td id="tile" class="doubleword row12">Double word score</td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="plaintile row14"></td>
+                <td id="tile" class="doubleletter row15">Double letter score</td>
+            </tr>
+            <tr class= "column11">
+                <td id="tile" class="plaintile row1"></td>
+                <td id="tile" class="plaintile row2"></td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="plaintile row4"></td>
+                <td id="tile" class="doubleword row5">Double word score</td>
+                <td id="tile" class="plaintile row6"></td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="plaintile row8"></td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="plaintile row10"></td>
+                <td id="tile" class="doubleword row11">Double word score</td>
+                <td id="tile" class="plaintile row12"></td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="plaintile row14"></td>
+                <td id="tile" class="plaintile row15"></td>
+            </tr>
+            <tr class= "column12">
+                <td id="tile" class="plaintile row1"></td>
+                <td id="tile" class="tripleletter row2">Triple letter score</td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="plaintile row4"></td>
+                <td id="tile" class="plaintile row5"></td>
+                <td id="tile" class="tripleletter row6">Triple letter score</td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="plaintile row8"></td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="tripleletter row10">Triple letter score</td>
+                <td id="tile" class="plaintile row11"></td>
+                <td id="tile" class="plaintile row12"></td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="tripleletter row14">Triple letter score</td>
+                <td id="tile" class="plaintile row15"></td>
+            </tr>
+            <tr class= "column13">
+                <td id="tile" class="plaintile row1"></td>
+                <td id="tile" class="plaintile row2"></td>
+                <td id="tile" class="doubleword row3">Double word score</td>
+                <td id="tile" class="plaintile row4"></td>
+                <td id="tile" class="plaintile row5"></td>
+                <td id="tile" class="plaintile row6"></td>
+                <td id="tile" class="doubleletter row7">Double letter score</td>
+                <td id="tile" class="plaintile row8"></td>
+                <td id="tile" class="doubleletter row9">Double letter score</td>
+                <td id="tile" class="plaintile row10"></td>
+                <td id="tile" class="plaintile row11"></td>
+                <td id="tile" class="plaintile row12"></td>
+                <td id="tile" class="doubleword row13">Double word score</td>
+                <td id="tile" class="plaintile row14"></td>
+                <td id="tile" class="plaintile row15"></td>
+            </tr>
+            <tr class="column14">
+                <td id="tile" class="plaintile row1"></td>
+                <td id="tile" class="doubleword row2">Double word score</td>
+                <td id="tile" class="plaintile row3"></td>
+                <td id="tile" class="plaintile row4"></td>
+                <td id="tile" class="plaintile row5"></td>
+                <td id="tile" class="tripleletter row6">Triple letter score</td>
+                <td id="tile" class="plaintile row7"></td>
+                <td id="tile" class="plaintile row8"></td>
+                <td id="tile" class="plaintile row9"></td>
+                <td id="tile" class="tripleletter row10">Triple letter score</td>
+                <td id="tile" class="plaintile row11"></td>
+                <td id="tile" class="plaintile row12"></td>
+                <td id="tile" class="plaintile row13"></td>
+                <td id="tile" class="doubleword row14">Double word score</td>
+                <td id="tile" class="plaintile row15"></td>
+            </tr>
+            <tr class="column15">
                 <td id="tile" class="tripleword row1">Triple word score</td>
                 <td id="tile" class="plaintile row2"></td>
                 <td id="tile" class="plaintile row3"></td>
