--- a/Scrabble.html
+++ b/Scrabble.html
@@ -264,5 +264,8 @@
                 <td id="tile" class="tripleword row15">Triple word score</td>
             </tr>
         </table>
+        <div>
+            
+        </div>
     </body>
 </html>
