--- a/Scrabble.html
+++ b/Scrabble.html
@@ -265,7 +265,8 @@
             </tr>
         </table>
         <div>
-            
+          <script src="scrabble.js"></script>
+          </script>  
         </div>
     </body>
 </html>
